include prototype in about screen

--- a/PIMS_Prototype/content/about.html
+++ b/PIMS_Prototype/content/about.html
@@ -28,12 +28,12 @@
     </div>
     <br />
 
-<h1 class="short">PIMS</h1>
+<h1 class="short">PIMS Interface Prototype</h1>
 
 
 </body>
 
-<footer>V 1.0</footer>
+<footer>V 0.1</footer>
 
 </html>
 
