--- a/PIMS_Prototype/content/welcome.html
+++ b/PIMS_Prototype/content/welcome.html
@@ -11,7 +11,7 @@
     <script src="../scripts/jquery-3.2.1.js"></script>
     <script src="../scripts/bootstrap.min.js"></script>
     <script src="../scripts/PIMS_Prototype.js"></script>
-    <link rel="stylesheet" href="../styles/PIMS_Prototype.css" />
+    <!--<link rel="stylesheet" href="../styles/PIMS_Prototype.css" />-->
     <link rel="stylesheet" href="../styles/ViewStyles.css" />
     <link rel="stylesheet" href="../styles/Site.css" />
     <link rel="stylesheet" type="text/css" href="../styles/daterangepicker.css" />
